# spell-tower-solver

./: .gitignore  Cargo.toml  analysis.py  determinism-notes.md  determinism.sh  perf_info.md  scoring.md  scoring.py  words.txt
nwl/: nwl2020-playability.txt  nwl2020.txt  nwl2023.txt
sample-input/: 20240904.ron  20240905.ron  board-1.ron  board-2.ron
src/: board.rs  dictionary.rs  game.rs  main.rs  position.rs
