[package]
name = "spell-tower-solver"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.1"
ctrlc = "3.4"
indicatif = { version = "0.17.8", features = ["improved_unicode", "rayon"] }
phf = { version = "0.11.2", features = ["macros"] }
rayon = "1.10"
r2d2 = "0.8.10"
r2d2_sqlite = "0.25.0"
rusqlite = { version = "0.32.0", features = ["array", "bundled"] }
